--- a/styles.css
+++ b/styles.css
@@ -18,3 +18,11 @@
     box-sizing: border-box;
     font-family: 'Inter', sans-serif;
 }
+
+/* ------HEADER------ */
+header{
+    display: flex;
+    outline: red solid 1px;
+    background-color: red;
+}
+/* ------HEADER------  END*/
