--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,28 @@
     box-sizing: border-box;
     font-family: 'Inter', sans-serif;
 }
+body{
+    padding: 3em 10em;
+}
 
 /* ------HEADER------ */
+header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+header .nav{
+    display: flex;
+    gap: 2em;
+}
+.nav li{
+    list-style-type: none;
+}
+.nav a{
+    color: #000;
+    text-decoration: none;
+    font-size: 15px;
+    opacity: 0.6;
+    font-weight: bold;
+}
 /* ------HEADER------  END*/
