--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,7 @@ main .story{
     align-items: center;
     grid-column-start: 1;
     grid-column-end: 3;
+    gap: 1em;
 }
 .story .banner{
     width: 100%;
@@ -63,6 +64,15 @@ main .story{
 .story-caption{
     display: flex;
     align-items: center;
+}
+.story-caption h1{
+    width: 90%;
+}
+.story-caption .title{
+    width: 50%;
+}
+.story-caption h1{
+    font-size: 2.5rem;
 }
 .story-caption .read-card{
     display: flex;
