--- a/styles.css
+++ b/styles.css
@@ -128,6 +128,7 @@ main .story{
     grid-column-start: 1;
     grid-column-end: 4;
     display: flex;
+    gap: 1em;
 }
 .topic-card{
     display: flex;
@@ -139,8 +140,18 @@ main .story{
 .topic-wrapper{
     display: flex;
     flex-direction: column;
-    gap: 0.5em;
     justify-content: space-between;
+}
+.topic-wrapper h3{
+    opacity: 0.5;
+    font-size: 1.7rem;
+}
+.topic-wrapper > :nth-child(2){
+    font-weight: bold;
+}
+.topic-wrapper > :nth-child(3){
+    font-size: 15px;
+    opacity: 0.7;
 }
 /* topics end */
 /* --------MAIN END-------- */
