--- a/styles.css
+++ b/styles.css
@@ -158,13 +158,23 @@ main .story{
 
 /*----------- RESPONSIVE AREA -----------*/
 @media screen and (max-width:414px){
+    body{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 1em;
+    }
+    /* HEADER */
     header{
         flex-direction: column;
         gap: 2em;
     }
+    /* HEADER END */
+
     
     main{
         grid-template-columns: 1fr;
+        place-items: center;
     }
     .aside{
         grid-row-start: 2;
@@ -173,7 +183,21 @@ main .story{
         grid-column-start: 1;
         grid-column-end: 2;
     }
-
+    .story .story-caption {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .story-caption .title {
+        width: 100%;
+    }
+    .story-caption h1{
+        font-size: 50px;
+    }
+    .story-caption .read-card {
+        flex-direction: column;
+        gap: 2em;
+        width: 100%;
+    }
     .topics{
         flex-direction: column;
     }
