--- a/styles.css
+++ b/styles.css
@@ -175,7 +175,9 @@ main .story{
     main{
         grid-template-columns: 1fr;
         place-items: center;
+        column-gap: 0;
     }
+
     .aside{
         grid-row-start: 2;
     }
@@ -186,6 +188,7 @@ main .story{
     .story .story-caption {
         flex-direction: column;
         align-items: flex-start;
+        gap: 1em;
     }
     .story-caption .title {
         width: 100%;
