main happy birthday wadie :)

--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,10 @@ header .nav {
     font-weight: bold;
 }
 
+.nav a:hover {
+    color: var(--soft-red);
+}
+
 /* ------HEADER END------*/
 
 /* --------MAIN-------- */
@@ -109,6 +113,10 @@ main .story {
     letter-spacing: 5px;
 }
 
+.read-card a:hover{
+    background-color: var(--very-dark-blue);
+}
+
 /* story end*/
 
 /* aside*/
@@ -133,6 +141,11 @@ main .story {
 
 .aside h3 {
     color: #fff;
+}
+
+.aside h3:hover {
+    color: #dfdf60;
+    cursor: pointer;
 }
 
 .aside p {
@@ -174,6 +187,10 @@ main .story {
 .topic-wrapper> :nth-child(2) {
     font-weight: bold;
 }
+.topic-wrapper> :nth-child(2):hover{
+    color: var(--soft-red);
+    cursor: pointer;
+} 
 
 .topic-wrapper> :nth-child(3) {
     font-size: 15px;
@@ -244,6 +261,8 @@ main .story {
         gap: 2em;
         width: 100%;
     }
+
+    
 
     .aside {
         grid-row-start: 2;
